infra/modules/network/elastic-ip.tf
resource "aws_eip" "elastic-ip-1a" {

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-elastic-ip-1a"
    }
  )
}

resource "aws_eip" "elastic-ip-1b" {

  tags = merge(
    var.tags,
    {
      Name = "${var.project_name}-elastic-ip-1b"
    }
  )
}
