infra/modules/network/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = var.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = merge(
    var.tags,
    {
      Name    = "${var.project_name}-vpc"
      Project = "${var.project_name}"
    }
  )
}
